--- a/css/main.css
+++ b/css/main.css
@@ -1506,15 +1506,16 @@ header .header-logo a {
  *
  * ------------------------------------------------------------------- */
 #home {
-  width: 100%;
-  height: 100%;
+  /*width: 100%;*/
+  /*height: 100%;*/
   background-color: #151515;
   background-image: url(../images/VRAR.jpg);
   background-repeat: no-repeat;
   background-position: center 30%;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
+  /*-webkit-background-size: cover;*/
+  /*-moz-background-size: cover;*/
+  background-size: contain;
+  /*background-size: cover;*/
   background-attachment: fixed;
   min-height: 804px;
   position: relative;
@@ -1756,7 +1757,6 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
 @media only screen and (max-width: 400px) {
   #home {
     min-height: 654px;
-    background-size: contain;
   }
 
   .home-content-tablecell .row {
