--- a/css/main.css
+++ b/css/main.css
@@ -1506,18 +1506,18 @@ header .header-logo a {
  *
  * ------------------------------------------------------------------- */
 #home {
-  /*width: 100%;*/
-  /*height: 100%;*/
+  width: 100%;
+  height: 100%;
   background-color: #151515;
   background-image: url(../images/VRAR.jpg);
   background-repeat: no-repeat;
   background-position: center 30%;
-  /*-webkit-background-size: cover;*/
-  /*-moz-background-size: cover;*/
-  background-size: contain;
-  /*background-size: cover;*/
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  /*background-size: contain;*/
+  background-size: cover;
   background-attachment: fixed;
-  min-height: 804px;
+  /*min-height: 804px;*/
   position: relative;
 }
 #home .overlay {
