--- a/css/main.css
+++ b/css/main.css
@@ -1758,7 +1758,21 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   #home {
     min-height: 654px;
   }
-
+  #home {
+    width: 100%;
+    height: 100%;
+    background-color: #151515;
+    background-image: url(../images/vr_home3.jpg);
+    background-repeat: no-repeat;
+    background-position: center 30%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    /*background-size: contain;*/
+    background-size: cover;
+    background-attachment: fixed;
+    /*min-height: 804px;*/
+    position: relative;
+  }
   .home-content-tablecell .row {
     padding-top: 4.8rem;
     padding-bottom: 10.8rem;
