--- a/css/main.css
+++ b/css/main.css
@@ -1759,7 +1759,8 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
     min-height: 654px;
   }
   #home {
-    width: 100%;
+    background-image: none;
+    /*width: 100%;
     height: 100%;
     background-color: #151515;
     background-image: url(../images/vr_home3.jpg);
@@ -1768,10 +1769,8 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
     -webkit-background-size: cover;
     -moz-background-size: cover;
     /*background-size: contain;*/
-    background-size: cover;
-    background-attachment: fixed;
     /*min-height: 804px;*/
-    position: relative;
+    /*position: relative;*/*/
   }
   .home-content-tablecell .row {
     padding-top: 4.8rem;
