--- a/css/main.css
+++ b/css/main.css
@@ -1509,7 +1509,7 @@ header .header-logo a {
   width: 100%;
   height: 100%;
   background-color: #151515;
-  /*background-image: url(../images/VRAR.jpg);*/
+  background-image: url(../images/VRAR.jpg);
   background-repeat: no-repeat;
   background-position: center 30%;
   -webkit-background-size: cover;
@@ -1758,18 +1758,18 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
     min-height: 654px;
   }
   #home {
-    background-image: none;
-    /*width: 100%;
+    /*background-image: none;*/
+/*    width: 100%;
     height: 100%;
     background-color: #151515;
     background-image: url(../images/vr_home3.jpg);
     background-repeat: no-repeat;
     background-position: center 30%;
     -webkit-background-size: cover;
-    -moz-background-size: cover;
-    /*background-size: contain;*/
-    /*min-height: 804px;*/
-    /*position: relative;*/*/
+    -moz-background-size: cover;*/
+    background-size: contain;
+    /*min-height: 804px;
+    /*position: relative;*/
   }
   .home-content-tablecell .row {
     padding-top: 4.8rem;
