--- a/css/main.css
+++ b/css/main.css
@@ -2327,12 +2327,6 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   margin: 0 auto;
 }
 
-#team-slider {
-  margin: 0 0 3rem 0;
-  position: relative;
-}
-#team-slider .slides {
-  padding-bottom: 2rem;
 }
 #team-list .team-item p {
   font-family: "librebaskerville-bold", serif;
@@ -2356,15 +2350,16 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   margin-top: 4.2rem;
 }
 #team .team-author .img-class {
-  width: 25rem;
-  height: 25rem;
+  width: 18%;
+  /*height: 18%;*/
   margin: 0 auto 0 auto;
-  border-radius: 20px 20px 20px 20px;
-  /*vertical-align: middle;*/
+  border-radius: 35%;
+  overflow: hidden;
+  vertical-align: middle;
   float: left;
 }
 #team .team-author .author-info {
-  width:60%;
+  width:80%;
   /*float: left;*/
   display: inline-block;
   /*vertical-align: top;*/
