--- a/css/main.css
+++ b/css/main.css
@@ -1758,7 +1758,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
     min-height: 654px;
   }
   #home {
-    /*background-image: none;*/
+    background-image: none;
 /*    width: 100%;
     height: 100%;
     background-color: #151515;
