--- a/css/main.css
+++ b/css/main.css
@@ -1515,7 +1515,7 @@ header .header-logo a {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
-  background-attachment: fixed;
+  /*background-attachment: fixed;*/
   min-height: 804px;
   position: relative;
 }
@@ -1757,8 +1757,8 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   #home {
     min-height: 654px;
   }
-  #home {
-    background-image: none;
+  /*#home {*/
+    /*background-image: none;*/
 /*    width: 100%;
     height: 100%;
     background-color: #151515;
@@ -1770,7 +1770,7 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
     /*background-size: contain;*/
     /*min-height: 804px;
     /*position: relative;*/
-  }
+  /*}*/
   .home-content-tablecell .row {
     padding-top: 4.8rem;
     padding-bottom: 10.8rem;
