added press section

--- a/css/main.css
+++ b/css/main.css
@@ -2523,12 +2523,20 @@ html[data-useragent*='MSIE 10.0'] .scrolldown,
   border-radius: 50%;
   vertical-align: middle;
 }
+#testimonial-slider .testimonial-author .img-class {
+  width: 40%;
+  margin: 0 auto 0 auto;
+  border-radius: 35%;
+  overflow: hidden;
+  vertical-align: middle;
+  float: middle;
+}
 #testimonial-slider .testimonial-author .author-info {
   display: inline-block;
   vertical-align: middle;
   text-align: center;
   font-family: "librebaskerville-bold", sans-serif;
-  font-size: 2rem;
+  font-size: 1rem;
   margin-top: .9rem;
   margin-bottom: 3rem;
   color: #151515;
