--- a/css/main.css
+++ b/css/main.css
@@ -1260,8 +1260,8 @@ header .header-logo a {
   padding: 0;
   outline: 0;
   border: none;
-  width: 57px;
-  height: 27px;
+  width: 50%;
+  /*height: 27px;*/
   background: url("../images/logo.png") no-repeat center;
   background-size: 57px 27px;
   font: 0/0 a;
